# ProjectWaaagh

./: .gitignore  CMakeLists.txt  README.md  RevisionData.hpp.in.cmake
CMake/: GenRevision.cmake  Options.cmake  ShowOptions.cmake
CMake/Compiler/Clang/: Settings.cmake
CMake/Compiler/GCC/: Settings.cmake
CMake/Compiler/ICC/: Settings.cmake
CMake/Compiler/MSVC/: Settings.cmake
CMake/Compiler/MinGW/: Settings.cmake
CMake/Macros/: AutoCollect.cmake  CheckBuildDir.cmake  CheckBuildDirectory.cmake  CheckPlatform.cmake  ConfigureBaseTargets.cmake  ConfigureTargets.cmake  EnsureVersion.cmake  FindGit.cmake  FindMySQL.cmake  FindReadline.cmake  GroupSources.cmake
CMake/Platform/Unix/: Settings.cmake
CMake/Platform/Windows/: Settings.cmake
Dependencies/: CMakeLists.txt
Dependencies/SFMT/: CMakeLists.txt
Dependencies/boost/: CMakeLists.txt
Dependencies/fmt/: CMakeLists.txt
Dependencies/mysql/: CMakeLists.txt
Dependencies/openssl/: CMakeLists.txt
Dependencies/threads/: CMakeLists.txt
Sources/: CMakeLists.txt
Sources/Framework/: Banner.cpp  Banner.hpp  CMakeLists.txt  CompilerDefines.hpp  CompilerDefs.hpp  Defines.hpp  Framework.hpp  GitRevision.cpp  GitRevision.hpp
Sources/Framework/Asio/: AsioHacksForwarder.hpp  DeadlineTimer.hpp  IoContext.hpp  IpAddress.hpp  IpNetwork.hpp  Resolver.hpp  Strand.hpp
Sources/Framework/Configuration/: ConfigManager.cpp  ConfigManager.hpp  Configuration.hpp
Sources/Framework/Debugging/: Errors.cpp  Errors.hpp
Sources/Framework/Logging/: Appender.cpp  Appender.hpp  AppenderConsole.cpp  AppenderConsole.hpp  AppenderFile.cpp  AppenderFile.hpp  Log.cpp  Log.hpp  LogCommon.hpp  LogMessage.cpp  LogMessage.hpp  LogOperation.cpp  LogOperation.hpp  Logger.cpp  Logger.hpp  enuminfo_AppenderCommon.cpp  enuminfo_AppenderConsole.cpp
Sources/Framework/Utilities/: Containers.hpp  Durations.hpp  IteratorPair.hpp  Optional.hpp  Random.cpp  Random.hpp  SFMTRand.cpp  SFMTRand.hpp  SmartEnum.hpp  StringConverter.hpp  StringFormat.hpp  Timer.hpp  Types.hpp  Utilities.cpp  Utilities.hpp  advstd.hpp
Sources/GenRev/: CMakeLists.txt
Sources/Servers/: CMakeLists.txt
Sources/Servers/Database/: CMakeLists.txt
Sources/Servers/Database/Database/: MySQLConnection.cpp  MySQLConnection.hpp  MySQLHacks.hpp  MySQLThreading.cpp  MySQLThreading.hpp  MySQLWorkaround.hpp
Sources/Servers/Game/: CMakeLists.txt
Sources/Servers/LoginServer/: CMakeLists.txt  LoginServer.cert.pem  LoginServer.conf.dist  LoginServer.key.pem  LoginServer.rc  Main.cpp  resource.h
Sources/Servers/Proto/: CMakeLists.txt
Sources/Servers/Shared/: CMakeLists.txt
Sources/Servers/WorldServer/: CMakeLists.txt  WorldServer.cert.pem  WorldServer.key.pem
